[package]
name = "letters"
version = "1.2.3"
authors = ["Hugh Rundle <hugh@hughrundle.net>"]
edition = "2018"

# reduce binary size with these optimisations
[profile.release]
lto = true
codegen-units = 1

[dependencies]
chrono = "^0.4.19"
clap = "^2.33.0"
colol = "^0.3"
console = "^0.13.0"
itertools = "^0.9.0"
reqwest = { version = "^0.11.1", features = ["blocking"] }
oauth = { version = "0.5", package = "oauth1-request" }
rss = "^1.10.0"
serde = "^1.0"
serde_derive = "^1.0"
shellexpand = "^2.0.0"
subprocess = "^0.2.6"
toml = "^0.5.7"
ureq = { version = "^1.5.4", features = ["json"] }